  o Update documentation to reflect removal of "apikey|" and "session|" prefixes from API keys and session keys
  o Issue 47202: Options to reduce payload of getContainers.api response: includeChildWorkbooks, includeStandardProperties
  o Note: only supported for LabKey Server v23.3

Changes in 2.9.1
  o Freezer Manager API - add Primary Storage option to storage-related action documentation

Changes in 2.9.0
  o Add support for creating Freezer Manager freezer hierarchies
  o New labkey.storage NAMESPACE: labkey.storage.create, labkey.storage.update, labkey.storage.delete
  o Note: only supported for LabKey Server v22.10

Changes in 2.8.4
  o Update labkey.provenance.createProvenanceParams to support custom properties (and standard run step properties)

Changes in 2.8.3
  o Issue 44619: labkey.getFolders() update to account for missing properties if the parent is root

Changes in 2.8.2
  o Issue 44110: Allow specification of a run name in the provenance API.

Changes in 2.8.1
  o Issue 43890: Fix for makeDF rname string concatenation
  o Issue 43853: Update error message for labkey.getModuleProperty() call when user does not have perm to requested container

Changes in 2.8.0
  o Issue 43358: Add support for impersonating users (labkey.security.impersonateUser and labkey.security.stopImpersonating)

Changes in 2.7.0
  o Add ontology filter types to makeFilter
  o Issue 43107: Fix for labkey.domain.createAndLoad to set strictFieldValidation to false for study datasets and data classes
  o Issue 42950: Add param to labkey.webdav.put for setting the file description
  o Issue 42546: Add new labkey.query.import command which uses file import to bulk import rows to a query/table
  o Update labkey.domain.createAndLoad to use the new labkey.query.import command for the bulk data import

Changes in 2.6.0
  o Add labkey.pipeline functions to be able to get pipeline protocol information and start jobs / analysis

Changes in 2.5.5